* v5.0.0:
~~~~~~~~~

* Assembly changes:
===================
+ Targeting also .NET Core 2.0.
+ Targeting also .NET Core 3.0.

+ KGySoft.Frawing.Imaging namespace:
====================================
A New namespace for fast and direct Bitmap pixel manipulation in a type-safe and managed way.

- KGySoft.Drawing namespace:
============================
+ BitmapExtensions class:
  - Resize method:
    - Fixing resize if keepAspectRatio is true.
    * keepAspectRation parameter is now optional (default value: false)
  + New GetReadableBitmapData/GetWritableBitmapData/GetReadWriteBitmapData methods: They provide and fast managed
    pixel access and/or manipulation for any pixel formats.
  + New Quantize method: Reduces number of colors
  + New Dither method: Reduces number of colors with dithering
  + New Clear methods: Similar to Graphics.Clear but supports every PixelFormat
  + New GetColorCount method
  + New TransformColors method
  + New ReplaceColor method
  + New Inverse method
  + New MakeOpaque method
  + New MakeGrayscale method
  + New AdjustBrightness method
  + New AdjustContrast method
  + New AdjustGamma method
- IconExtensions class:
  - ExtractBitmap/ExtractBitmaps: Fixing ArgumentNullException if the icon was created from a handle and
    keepOriginalFormat parameter was true.
  - Combine methods have been fixed for indexed bitmaps with specified transparent color
+ ImageExtensions class:
  + ConvertPixelFormat method:
    + Supporting every pixel formats, including Format16bppGrayScale and Format16bppArgb1555.
    + New backColor optional parameter: Specifies a background color for non-alpha pixel formats. From now on
      converting alpha bitmaps to non-alpha ones the color of the originally alpha pixels will not be necessarily
      black. Not fully transparent pixels are blended with the specified background color.
    + New alphaThreshold optional parameter: If the new pixel format has one bit alpha or is indexed, then specifies