@@ -22,7 +22,8 @@ A New namespace for fast and direct Bitmap pixel manipulation in a type-safe and
 ============================
 + BitmapExtensions class:
   - Resize method:
-    - Fixing resize if keepAspectRatio is true.
+    - Fixing resize if keepAspectRatio is true
+    - Supporting every source pixel format
     * keepAspectRation parameter is now optional (default value: false)
   + New GetReadableBitmapData/GetWritableBitmapData/GetReadWriteBitmapData methods: They provide and fast managed
     pixel access and/or manipulation for any pixel formats.
